# chatgpt-cli

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: semantic-release.yaml
chatgpt_cli/: main.py  settings.py
chatgpt_cli/services/: chatgpt.py
tools/: commit_release_artifacts.sh
