[tool.pdm]
version = { source = "file", path = "chatgpt_cli/__version__.py" }
readme = "README.md"

[tool.pdm.dev-dependencies]
dev = [
    "ipython>=8.11.0",
    "notebook>=6.5.2",
    "ruff>=0.0.254",
    "black>=23.1.0",
    "pre-commit>=3.1.1",
    "python-semantic-release>=7.33.2",
]

[project]
name = "chatgpt-api-cli"
dynamic = ["version"]
description = "A CLI wrapper for OpenAI's ChatGPT API"
authors = [
    {name = "Aumit Leon", email = "aumitleon@gmail.com"},
]
dependencies = [
    "openai>=0.27.0",
    "typer[all]>=0.7.0",
    "pydantic[dotenv]>=1.10.5"
]
requires-python = ">=3.11"
license = {text = "MIT"}

[build-system]
requires = ["pdm-pep517"]
build-backend = "pdm.pep517.api"

[tool.pdm.build]
includes = [
    "chatgpt_cli/",
    "README.md",
]

[project.scripts]
chatgpt = "chatgpt_cli.main:main"

[tool.semantic_release]
version_variable = "chatgpt_cli/__version__.py:__version__"
version_source = "tag"
branch = "main"
build_command = "pdm build"

[tool.pdm.scripts]
shell = "ipython"
publish_release = "pdm run semantic-release publish -v DEBUG"
commit_release_artifacts = {shell = "./tools/commit_release_artifacts.sh"}
